<resources>
    <string name="app_name">MOBV2022</string>
    <string name="login_title">Login to app</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="login_subtitle">
        <font color="#F2771A"><b>Login</b></font> if you already have an account.
    </string>
    <string name="sign_up_subtitle">
        <font color="#F2771A"><b>Sign Up</b></font> if you not registered yet.
    </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="password_valid">Password must match witch confirm password and greater than 6 characters</string>
    <string name="password_valid_login">Password is required, must be greater than 6</string>
    <string name="username_valid">Username is required</string>
    <string name="user_not_exist">User does not exist</string>
    <string name="add_friend">Add friends</string>
    <string name="nearby_bars">Nearby bars</string>
    <string name="all_bars">All bars</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort_name">Name</string>
    <string name="sort_distance">Distance</string>
    <string name="sort_count">Count</string>
    <string name="sign_in">Sign in</string>
    <string name="show_on_map">Show on map</string>
    <string name="search_for_friends">Search for friends</string>
    <string name="search">Search</string>
    <string name="friend_list">Friend list</string>
    <string name="back">Back</string>
    <string name="users">Users</string>
    <string name="delete">Delete</string>
    <string name="friends">Friends</string>
    <string name="other_friends">Other Friends</string>
    <string name="sin_in">Sin In</string>
</resources>