<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/barsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_sports_bar_24"
        android:title="@string/all_bars"/>

    <item
        android:id="@+id/addFriendFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_group_add_24"
        android:title="@string/add_friend"/>
    <item
        android:id="@+id/barSignInFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:title="@string/nearby_bars"/>

    <item
        android:id="@+id/friendListFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_format_list_bulleted_24"
        android:title="@string/friend_list"/>

    <item
        android:id="@+id/logInFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/logout"/>
</menu>