<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.BarsFragment">

    <data>
        <import type="android.view.View" />
        <variable
            name="model"
            type="sk.stu.fei.mobv2022.ui.viewmodels.BarListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/sort_by_name"
                style="@style/orange_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_name" />

            <com.google.android.material.chip.Chip
                android:id="@+id/sort_by_distance"
                style="@style/orange_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_distance" />

            <com.google.android.material.chip.Chip
                android:id="@+id/sort_by_count"
                style="@style/orange_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_count" />

        </com.google.android.material.chip.ChipGroup>

        <ImageView
            android:id="@+id/logout"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginEnd="25dp"
            android:src="@drawable/ic_baseline_logout_24"
            app:layout_constraintBottom_toBottomOf="@+id/chipGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/chipGroup" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup">

            <sk.stu.fei.mobv2022.ui.components.barsRecyclerView.widget.BarsRecyclerView
                android:id="@+id/barsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:barItems="@{model.bars}" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>